--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="#schedule">Jadwal</a></li>
                 <li><a href="#categories">Kategori</a></li>
                 <li><a href="#contact">Kontak</a></li>
+                <li><a href="bank-soal.html">Bank Soal</a></li>
             </ul>
         </div>
     </nav>
